--- a/index.html
+++ b/index.html
@@ -14,7 +14,18 @@
         <div class="caixa-resultado">
             <p class="texto-resultado"></p>
         </div>
-    </div>
+
+        <main>
+            <section>
+                <p>A Inteligência Artificial (IA) refere-se à criação de sistemas capazes de realizar tarefas que, normalmente, exigiriam inteligência humana, como aprender, resolver problemas e tomar decisões. Essa tecnologia está revolucionando diversas áreas, como saúde, transporte e finanças.</p>
+            </section>
+        </main>
+
+        <main>
+            <section>
+                <p>A IA está presente no nosso dia a dia, desde assistentes virtuais até recomendações de filmes. Ela usa grandes volumes de dados para aprender e melhorar suas funções, mas também levanta questões sobre ética e o futuro do trabalho.</p>
+            </section>
+        </main>
     <script src="script.js"></script>
 </body>
 </html>
